--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "redis": "^4.5.0",
     "validator": "^13.7.0"
   },
